# twitter-archive

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/: README.md
.github/workflows/: test.yaml
examples/: search-direct-messages.rs  search-tweets.rs
src/: lib.rs
src/convert/: created_at.rs  date_time_iso_8601.rs  date_year_month_day.rs  date_year_month_day_hour_minute_second.rs  indices.rs  number_like_string.rs
src/structs/: account.rs  account_timezone.rs  ad.rs  ad_engagements.rs  ad_impressions.rs  block.rs  community_note_rating.rs  connected_application.rs  deleted_tweet_headers.rs  device_token.rs  direct_message.rs  direct_message_group_headers.rs  direct_message_headers.rs  direct_messages.rs  direct_messages_group.rs  email_address_change.rs  follow.rs  follower.rs  following.rs  ip_audit.rs  key_registry.rs  like.rs  lists_member.rs  manifest.rs  mute.rs  ni_devices.rs  personalization.rs  phone_number.rs  profile.rs  screen_name_change.rs  tweet_headers.rs  tweetdeck.rs  tweets.rs  twitter_circle.rs  verified.rs
